gccida/g0/ix86_va_arg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3039:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3041:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3060:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3069:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+3Ch] [rbp-E4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3127:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3132:1: error: use of undeclared identifier 'intreg_45'
intreg_45, 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3143:21: error: use of undeclared identifier 'machine_mode'
examine_argument( ( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), type, 0, &needed_intregs, &needed_sseregs); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3214:37: error: use of undeclared identifier 'machine_mode'
r = expand_expr( t, int_addr_rtx, ( machine_mode)v18, EXPAND_NORMAL); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/i386.c:3222:37: error: use of undeclared identifier 'machine_mode'
r = expand_expr( t, sse_addr_rtx, ( machine_mode)v19, EXPAND_NORMAL); 
                                    ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_va_arg/src/obj/i386.o] Error 1
